[package]
name = "forkjoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
crossbeam = "0.8.2"
crossbeam-utils = "0.8.16"
error-chain = "0.12.4"
lazy_static = "1.4.0"
thiserror = "1.0.44"
log = "0.4.19"
env_logger = "0.10.0"
