[package]
name = "forkjoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
crossbeam = "0.8.2"
crossbeam-utils = "0.8.16"
thiserror = "1.0.44"
log = "0.4.19"
env_logger = "0.10.0"

[lib]
name = "forkjoin_crossbeam"  # Name of your library
path = "src/lib.rs"  # Path to the main library source file
